Added detail page and read from device (notifications)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,23 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+  <ion-header translucent>
+    <ion-toolbar>
+      <ion-title>Bluetooth</ion-title>
+      <ion-buttons slot="primary">
+        <ion-button (click)="scan()">
+          <ion-icon slot="icon-only" name="md-refresh"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  
 
 <ion-content>
   <ion-list> 
-   <button ion-item *ngFor="let device of devices">
+   <button ion-item *ngFor="let device of devices" (click)="deviceSelected(device)">
      <h2>{{ device.name || 'Unnamed' }}</h2>
      <p>{{ device.id }}</p>
      <p>RSSI: {{ device.rssi }}</p>
    </button>  
   </ion-list> 
 </ion-content>
-
-<ion-footer>
- <ion-toolbar>
-   <p>{{ statusMessage }}</p>
- </ion-toolbar>
-</ion-footer>
