--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
   <ion-header translucent>
     <ion-toolbar>
-      <ion-title>Bluetooth</ion-title>
+      <ion-title>Proyecto 3A</ion-title>
       <ion-buttons slot="primary">
         <ion-button (click)="scan()">
           <ion-icon slot="icon-only" name="md-refresh"></ion-icon>
@@ -12,10 +12,18 @@
 
 <ion-content>
   <ion-list> 
-   <button ion-item *ngFor="let device of devices" (click)="deviceSelected(device)">
-     <h2>{{ device.name || 'Unnamed' }}</h2>
-     <p>{{ device.id }}</p>
-     <p>RSSI: {{ device.rssi }}</p>
-   </button>  
+  
+   <ion-card ion-item *ngFor="let device of devices">
+    <ion-card-header>
+      <ion-card-subtitle>{{ device.id }}</ion-card-subtitle>
+      <ion-card-title>{{ device.name || 'Unnamed' }}</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+        <p>RSSI: {{ device.rssi }}</p>
+        <ion-button (click)="deviceSelected(device)">Connect</ion-button>
+    </ion-card-content>
+  </ion-card>
+  
   </ion-list> 
 </ion-content>
