--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Routes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <div #map style="height:100%;"></div>
 </ion-content>
