--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar>
       <ion-title>Login</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -8,7 +8,7 @@
     <form class="form" [formGroup]="validations_form"  (ngSubmit)="loginUser(validations_form.value)">
   
       <ion-item>
-        <ion-label  position="floating" color="primary">Email</ion-label>
+        <ion-label  position="floating">Email</ion-label>
         <ion-input type="text" formControlName="email"></ion-input>
       </ion-item>
       <div class="validation-errors">
@@ -20,7 +20,7 @@
       </div>
   
       <ion-item>
-        <ion-label  position="floating" color="primary">Password</ion-label>
+        <ion-label  position="floating">Password</ion-label>
         <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
       </ion-item>
       <div class="validation-errors">
