--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -11,6 +11,11 @@
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryRegister(validations_form.value)">
 
     <ion-item>
+      <ion-label position="floating">Name</ion-label>
+      <ion-input type="text" formControlName="name"></ion-input>
+    </ion-item>
+
+    <ion-item>
       <ion-label position="floating">Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
@@ -35,6 +40,11 @@
         </div>
       </ng-container>
     </div>
+
+    <ion-item>
+      <ion-label position="floating">Contact Number</ion-label>
+      <ion-input type="text" formControlName="telephone"></ion-input>
+    </ion-item>
 
 
     <ion-button class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
