--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -30,13 +30,12 @@
           </div>
         </ng-container>
       </div>
-  
-      <ion-button  class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Log In</ion-button>
+      <br>
+      <ion-button expand="block" class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Log In</ion-button>
+      <br>
+      <ion-button expand="block" (click)="goToRegisterPage()">Register</ion-button>
   
       <label class="error-message">{{errorMessage}}</label>
     </form>
-    <p class="go-to-register">
-      No account yet? <a (click)="goToRegisterPage()">Create an account.</a>
-    </p>
   </ion-content>
   
