--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -46,10 +46,9 @@
       <ion-input type="text" formControlName="telephone"></ion-input>
     </ion-item>
 
-
-    <ion-button class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
+    <br>
+    <ion-button expand="block" class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
-  <p class="go-to-login">Already have an account? <a (click)="goLoginPage()">Try to Log In.</a></p>
 </ion-content>
