--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -5,5 +5,6 @@
 </ion-header>
 
 <ion-content>
-
+  <p>User: {{userEmail}}</p>
+  <ion-button expand="block" (click)="logout()">Log out</ion-button>
 </ion-content>
