--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -5,6 +5,20 @@
 </ion-header>
 
 <ion-content>
-  <p>User: {{userEmail}}</p>
+    <ion-grid>
+        <ion-row>
+          <ion-col size="4">
+          </ion-col>
+          <ion-col size="4" class="ion-text-center">
+            <ion-avatar>
+              <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+            </ion-avatar>
+            <ion-label>{{userEmail}}</ion-label>
+          </ion-col>
+          <ion-col size="4">
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
   <ion-button expand="block" (click)="logout()">Log out</ion-button>
 </ion-content>
