Acceso a la camara con retorno de foto

--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -6,4 +6,9 @@
 
 <ion-content>
 
+    <ion-content padding>
+        <ion-button (click)="hacerFoto()">Hacer foto</ion-button>
+        <img [src]="foto" *ngIf="foto" />
+      </ion-content>
+
 </ion-content>
