--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-    <div #map style="height:100%;"></div>
+    <div id="map" #map style="height:100%;"></div>
 </ion-content>
