--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -5,5 +5,8 @@
 </ion-header>
 
 <ion-content>
-    <div id="map" #map style="height:100%;"></div>
+  <!-- Searchbar with cancel button shown on focus -->
+  <ion-searchbar (ionInput)="calcRoute()" placeholder="Destination"></ion-searchbar>
+    <div id="map" #map style="height:100%;">
+  </div>
 </ion-content>
