--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -7,6 +7,14 @@
 <ion-content>
   <!-- Searchbar with cancel button shown on focus -->
   <ion-searchbar (search)="calcRoute($event)" placeholder="Destination"></ion-searchbar>
+  <ion-item>
+          <ion-label>Tipo de Sensor</ion-label>
+          <ion-select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChange($event)">
+            <ion-select-option value="azufre">SO2</ion-select-option>
+            <ion-select-option value="CO2">CO2</ion-select-option>
+            <ion-select-option value="NOX">NOX</ion-select-option>
+          </ion-select>
+  </ion-item>
     <div id="map" #map style="height:100%;">
   </div>
 </ion-content>
