--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -6,8 +6,8 @@
 
 <ion-content>
   <!-- Searchbar with cancel button shown on focus -->
-  <ion-searchbar (search)="calcRoute($event)" placeholder="Destination"></ion-searchbar>
-  <ion-item>
+  <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
+    <ion-item>
           <ion-label>Tipo de Sensor</ion-label>
           <ion-select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChange($event)">
             <ion-select-option value="azufre">SO2</ion-select-option>
