--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -8,9 +8,9 @@
   <!-- Searchbar with cancel button shown on focus -->
   <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
     <ion-item>
-          <ion-label>Tipo de Sensor</ion-label>
+          <ion-label>Pollutant</ion-label>
           <ion-select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChange($event)">
-            <ion-select-option value="azufre">SO2</ion-select-option>
+            <ion-select-option value="SO2">SO2</ion-select-option>
             <ion-select-option value="CO2">CO2</ion-select-option>
             <ion-select-option value="NOX">NOX</ion-select-option>
           </ion-select>
