--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,7 +5,7 @@
   </ion-header>
   
   <ion-content padding>
-    <form class="form" [formGroup]="validations_form"  (ngSubmit)="loginUser(validations_form.value)">
+    <form class="form" [formGroup]="validations_form"  (ngSubmit)="login(validations_form.value)">
   
       <ion-item>
         <ion-label  position="floating">Email</ion-label>
