Get profile image from gravatar

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -11,7 +11,7 @@
           </ion-col>
           <ion-col size="4" class="ion-text-center">
             <ion-avatar>
-              <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+              <img [src]="obtenerImagenGravatar()">
             </ion-avatar>
             <ion-label>{{userEmail}}</ion-label>
           </ion-col>
