--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Settings</ion-title>
-    <ion-button size="small" color="danger" slot="end" (click)="logout()">Log out</ion-button>
+    <ion-button class="logoutButton" size="small" color="danger" slot="end" (click)="logout()">Log out</ion-button>
   </ion-toolbar>
 </ion-header>
 
