--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,5 +5,8 @@
 </ion-header>
 
 <ion-content>
-
+  <div class="ion-padding">
+    <p>Gases respirados en un día</p>
+    <div style="display: block"><canvas id="yudhatp-chart"></canvas></div>
+  </div>
 </ion-content>
