--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -5,10 +5,11 @@
 </ion-header>
 
 <ion-content>
-
-    <ion-content padding>
-        <ion-button (click)="hacerFoto()">Hacer foto</ion-button>
-        <img [src]="foto" *ngIf="foto" />
-      </ion-content>
-
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="hacerFoto()">
+      <ion-fab-button>
+        <ion-icon name="camera">
+        </ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  <img [src]="foto" *ngIf="foto" />
 </ion-content>
