Changed photo's tab icon

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,7 +12,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="photos">
-      <ion-icon name="camera"></ion-icon>
+      <ion-icon name="image"></ion-icon>
       <ion-label>Photos</ion-label>
     </ion-tab-button>
 
