--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -5,11 +5,27 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card>
+          <img [src]="foto" *ngIf="foto" />
+          <ion-card-header>
+            <ion-card-subtitle>05/11/2019</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            Air quality: <ion-icon color="success" name="happy"></ion-icon>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="hacerFoto()">
-      <ion-fab-button>
-        <ion-icon name="camera">
-        </ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  <img [src]="foto" *ngIf="foto" />
+    <ion-fab-button>
+      <ion-icon name="camera">
+      </ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
