--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -20,23 +20,43 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-list>
-    <ion-list-header>Devices</ion-list-header>
-    <ion-item>
-        <ion-icon slot="start" name="bluetooth"></ion-icon>
-      <ion-label>
-        <h3>Lorem ipsum</h3>
-        <p>dolor sit amet</p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-        <ion-icon slot="start" name="bluetooth"></ion-icon>
-      <ion-label>
-        <h3>Lorem ipsum</h3>
-        <p>dolor sit amet</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="0" size-sm="3">
+      </ion-col>
+      <ion-col size="12" size-sm="6">
+        <ion-list>
+          <ion-list-header>Devices</ion-list-header>
+          <ion-item>
+              <ion-icon slot="start" name="bluetooth"></ion-icon>
+            <ion-label>
+              <h3>Lorem ipsum</h3>
+              <p>dolor sit amet</p>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+              <ion-icon slot="start" name="bluetooth"></ion-icon>
+            <ion-label>
+              <h3>Lorem ipsum</h3>
+              <p>dolor sit amet</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col size="0" size-sm="3">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-  <ion-button expand="block">Add</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="0" size-sm="3">
+      </ion-col>
+      <ion-col size="12" size-sm="6">
+        <ion-button expand="block">Add</ion-button>
+      </ion-col>
+      <ion-col size="0" size-sm="3">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
