--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,24 +5,34 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Pollutants</ion-card-title>
-      <ion-card-subtitle>last 24h</ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content>
-      <div style="display: block"><canvas id="yudhatp-chart"></canvas></div>
-    </ion-card-content>
-  </ion-card>
+    <ion-grid>
+        <ion-row>
+          <ion-col size="0" size-lg="3">
+          </ion-col>
+          <ion-col size="12" size-lg="6">
+            <ion-card>
+              <ion-card-header>
+                <ion-card-title>Pollutants</ion-card-title>
+                <ion-card-subtitle>last 24h</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content>
+                <div style="display: block"><canvas id="yudhatp-chart"></canvas></div>
+              </ion-card-content>
+            </ion-card>
 
-  <ion-card>
-    <ion-item>
-      <ion-icon name="navigate" slot="start"></ion-icon>
-      <ion-label>Work</ion-label>
-      <ion-label color="medium">15min</ion-label>
-      <ion-icon color="success" name="happy"></ion-icon>
-      <ion-button fill="outline" slot="end">Go</ion-button>
-    </ion-item>
-    <img src="https://img.mobiscroll.com/demos/route.png" alt="">
-  </ion-card>
+            <ion-card>
+              <ion-item>
+                <ion-icon name="navigate" slot="start"></ion-icon>
+                <ion-label>Work</ion-label>
+                <ion-label color="medium">15min</ion-label>
+                <ion-icon color="success" name="happy"></ion-icon>
+                <ion-button fill="outline" slot="end">Go</ion-button>
+              </ion-item>
+              <img src="https://img.mobiscroll.com/demos/route.png" alt="">
+            </ion-card>
+          </ion-col>
+        <ion-col size="0" size-lg="3">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
