--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -1,6 +1,13 @@
 ion-avatar{
     margin: 0 auto 10px auto; 
 }
+ion-avatar {
+    width:100% !important;
+    height : 100% !important;
+    max-width: 100px !important;  
+    max-height: 100px !important; 
+    margin-top: 30px;
+    }
 .logoutButton{
     margin-right: 10px;
 }
