--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content text-center>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="login(validations_form.value)">
 
       <ion-grid>
@@ -12,7 +12,7 @@
             <ion-col size="0" size-sm="3">
             </ion-col>
             <ion-col size="12" size-sm="6">
-              
+              <img class="logo" src="assets/img/icon.png" alt="">
               <ion-item>
                 <ion-label position="floating">Email</ion-label>
                 <ion-input autofocus="true" type="email" formControlName="email"></ion-input>
