toggle select pollutant working

--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -7,9 +7,9 @@
 <ion-content>
   <!-- Searchbar with cancel button shown on focus -->
   <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
-    <ion-item>
+    <ion-item *ngIf="showSelectContaminante">
           <ion-label>Pollutant</ion-label>
-          <ion-select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChange($event)">
+          <ion-select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChangeContaminante($event)">
             <ion-select-option value="SO2">SO2</ion-select-option>
             <ion-select-option value="CO2">CO2</ion-select-option>
             <ion-select-option value="NOX">NOX</ion-select-option>
@@ -17,4 +17,10 @@
   </ion-item>
     <div id="map" #map style="height:100%;">
   </div>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="toggleSelectorContaminante()">
+    <ion-fab-button>
+      <ion-icon name="thermometer">
+      </ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
