Show select with just one click

--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -7,9 +7,8 @@
 <ion-content>
   <!-- Searchbar with cancel button shown on focus -->
   <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
-    <ion-item *ngIf="showSelectContaminante">
-          <ion-label>Pollutant</ion-label>
-          <ion-select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChangeContaminante($event)">
+    <ion-item hidden="true">
+          <ion-select #select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChangeContaminante($event)">
             <ion-select-option value="SO2">SO2</ion-select-option>
             <ion-select-option value="CO2">CO2</ion-select-option>
             <ion-select-option value="NOX">NOX</ion-select-option>
