--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,62 +1,55 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Settings</ion-title>
-    <ion-button class="logoutButton" size="small" color="danger" slot="end" (click)="logout()">Log out</ion-button>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Settings</ion-title>
+        <ion-button class="logoutButton" size="small" color="danger" slot="end" (click)="logout()">Log out</ion-button>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="3">
-      </ion-col>
-      <ion-col size="6" class="ion-text-center">
-        <ion-avatar>
-          <img [src]="obtenerImagenGravatar()">
-        </ion-avatar>
-        <ion-label>{{userEmail}}</ion-label>
-      </ion-col>
-      <ion-col size="3">
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="0" size-sm="3">
-      </ion-col>
-      <ion-col size="12" size-sm="6">
-        <ion-list>
-          <ion-list-header>Devices</ion-list-header>
-          <ion-item>
-              <ion-icon slot="start" name="bluetooth"></ion-icon>
-            <ion-label>
-              <h3>Lorem ipsum</h3>
-              <p>dolor sit amet</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-              <ion-icon slot="start" name="bluetooth"></ion-icon>
-            <ion-label>
-              <h3>Lorem ipsum</h3>
-              <p>dolor sit amet</p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-      <ion-col size="0" size-sm="3">
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="3">
+            </ion-col>
+            <ion-col size="6" class="ion-text-center">
+                <ion-avatar>
+                    <img [src]="obtenerImagenGravatar()">
+                </ion-avatar>
+                <ion-label>{{userEmail}}</ion-label>
+            </ion-col>
+            <ion-col size="3">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="0" size-sm="3">
+            </ion-col>
+            <ion-col size="12" size-sm="6">
+                <ion-list>
+                    <ion-list-header>Mis EcoHolders</ion-list-header>
+                    <ion-item *ngFor="let device of devices">
+                        <ion-icon slot="start" name="bluetooth"></ion-icon>
+                        <ion-label>
+                            <h3> {{ device.alias }} </h3>
+                            <p> Vinculado el: {{ device.date | date:'d MMM, y' }} </p>
+                        </ion-label>
+                    </ion-item>
+                </ion-list>
+            </ion-col>
+            <ion-col size="0" size-sm="3">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="0" size-sm="3">
-      </ion-col>
-      <ion-col size="12" size-sm="6">
-        <ion-button expand="block">Add</ion-button>
-      </ion-col>
-      <ion-col size="0" size-sm="3">
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="0" size-sm="3">
+            </ion-col>
+            <ion-col size="12" size-sm="6">
+                <ion-button expand="block">Add</ion-button>
+            </ion-col>
+            <ion-col size="0" size-sm="3">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
