--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -29,6 +29,7 @@
                     <ion-list-header>Mis EcoHolders</ion-list-header>
                     <ion-item *ngFor="let device of devices">
                         <ion-icon slot="start" name="bluetooth"></ion-icon>
+                        <ion-icon slot="end" name="trash"></ion-icon>
                         <ion-label>
                             <h3> {{ device.alias }} </h3>
                             <p> Vinculado el: {{ device.date | date:'d MMM, y' }} </p>
