showing grid with button working

--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -1,25 +1,29 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Routes</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Routes</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- Searchbar with cancel button shown on focus -->
-  <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
+    <!-- Searchbar with cancel button shown on focus -->
+    <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
     <ion-item hidden="true">
-          <ion-select #select value="SO2" ok-text="Ok" cancel-text="Cancel" (ionChange)="onChangeContaminante($event)">
-            <ion-select-option value="SO2">SO2</ion-select-option>
-            <ion-select-option value="CO2">CO2</ion-select-option>
-            <ion-select-option value="NOX">NOX</ion-select-option>
-          </ion-select>
-  </ion-item>
+
+        <ion-select #select value="SO2"  ok-text="Ok"  cancel-text="Cancel" (ionChange)="onChangeContaminante($event)">
+
+            <ion-select-option value="SO2">SO2</ion-select-option>
+
+                <ion-select-option value="CO2">CO2</ion-select-option>
+
+                    <ion-select-option value="NOX">NOX</ion-select-option>
+        </ion-select>
+    </ion-item>
     <div id="map" #map style="height:100%;">
-  </div>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="toggleSelectorContaminante()">
-    <ion-fab-button>
-      <ion-icon name="thermometer">
-      </ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+    </div>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="mostrarGrid()">
+        <ion-fab-button>
+            <ion-icon name="grid">
+            </ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
