--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -53,7 +53,22 @@
             <ion-col size="0" size-sm="3">
             </ion-col>
             <ion-col size="12" size-sm="6">
-                <ion-button expand="block">Add</ion-button>
+
+
+                <ion-button expand="block" (click)="buscarYMostrarDispositivos()">Add</ion-button>
+                <ion-list>
+                <ion-item *ngFor="let device of newDevices;let j = index" (click)="darDeAlta(j)">
+                    <ion-icon slot="start" name="bluetooth"></ion-icon>
+                    <ion-icon slot="end" name="add" ></ion-icon>
+                    <ion-label>
+                        <h3> {{device.name || 'Unnamed'}} </h3>
+                        <p> {{ device.id }} </p>
+                    </ion-label>
+                </ion-item>
+              </ion-list>
+
+
+
             </ion-col>
             <ion-col size="0" size-sm="3">
             </ion-col>
