--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -28,8 +28,8 @@
 
         <ion-fab-list side="top">
             <ion-fab-button (click)="mostrarGrid()">
-                <ion-icon name="eye" *ngIf="!cuadricula"></ion-icon>
-                <ion-icon name="eye-off" *ngIf="cuadricula"></ion-icon>
+                <ion-icon name="grid" *ngIf="!cuadricula"></ion-icon>
+                <ion-icon name="thermometer" *ngIf="cuadricula"></ion-icon>
             </ion-fab-button>
             <ion-fab-button (click)="toggleSelectorContaminante()">
                 <ion-icon name="funnel"></ion-icon>
