--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,15 +4,15 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content data-step= "1" data-intro="Bienvenido a EcoHolder!">
     <ion-grid>
         <ion-row>
             <ion-col size="0" size-lg="3">
             </ion-col>
             <ion-col size="12" size-lg="6">
-                <ion-card>
+                <ion-card data-step= "2" data-intro= "Aqui podrás encontrar la contaminación a la que has sido expuesto en las últimas 24 Horas">
                     <ion-card-header>
-                        <ion-card-title>Mi nivel de exposición</ion-card-title>
+                        <ion-card-title>HOLA Mi nivel de exposición</ion-card-title>
                         <ion-card-subtitle>Últimas 24 horas</ion-card-subtitle>
                     </ion-card-header>
                     <ion-card-content>
@@ -30,7 +30,7 @@
                     </ion-card-content>
                 </ion-card>
 
-                <ion-card>
+                <ion-card data-step= "3" data-intro= " ¡LIMPIA TU AIRE! Aqui podrás tener un control de tus rutas favoritas para mantener tus zonas limpias">
                     <ion-item>
                         <ion-icon name="navigate" slot="start"></ion-icon>
                         <ion-label>Work</ion-label>
