--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -1,16 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Photos</ion-title>
+    <ion-title data-step="1" data-intro="A hacer fotos!">Photos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
+      <ion-card>
+          <ion-card-header>
+              <ion-card-subtitle>¿Quiere saber que aire respira al empezar el dia?</ion-card-subtitle>
+          </ion-card-header>
+        
+          <ion-card-content>
+              Haga una foto al horizonte y nuestros expertos la evaluarán para ofrecerle la mejor información sobre las partículas que respira día a día.
+              <br><br>
+              Aqui tienes una lista de tus fotos:
+          </ion-card-content>
+        </ion-card>
     <ion-row>
       <ion-col size="6">
-        <ion-card>
+        <ion-card data-step="2" data-intro="Aqui se muestran las fotos que has guardado">
           <img [src]="foto" *ngIf="foto" />
-          <ion-card-header>
+          <ion-card-header data-step="3" data-intro="Información de cada foto">
             <ion-card-subtitle>05/11/2019</ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
@@ -22,7 +33,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="hacerFoto()">
+  <ion-fab data-step="4" data-intro="¿Quiere saber que aire respira al empezar el dia? Haga una foto al horizonte y nuestros expertos la evaluarán para ofrecerle la mejor información sobre las partículas que respira día a día " vertical="bottom" horizontal="end" slot="fixed" (click)="hacerFoto()" vertical="bottom" horizontal="end" slot="fixed" (click)="hacerFoto()">
     <ion-fab-button>
       <ion-icon name="camera">
       </ion-icon>
