--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -1,12 +1,12 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Routes</ion-title>
+        <ion-title data-step="1" data-intro="En esta pestaña puedes encontrar cualquier lugar del MUNDO!">Routes</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <!-- Searchbar with cancel button shown on focus -->
-    <ion-searchbar id="search" #search type="text" placeholder="Pick a destination"></ion-searchbar>
+    <ion-searchbar id="search" #search type="text" placeholder="Pick a destination" data-step= "2" data-intro="Realiza la búsqueda de tu destino. Venga, adéntrate en el mapa :)"></ion-searchbar>
     <ion-item hidden="true">
 
         <ion-select #select value="SO2"  ok-text="Ok"  cancel-text="Cancel" (ionChange)="onChangeContaminante($event)">
@@ -18,9 +18,9 @@
             <ion-select-option value="NOX">NOX</ion-select-option>
         </ion-select>
     </ion-item>
-    <div id="map" #map style="height:100%;">
+    <div id="map" #map style="height:100%;" data-step="3" data-intro="Visualiza tu mapa con todo tipo de detalles. Puedes ver la cantidad de gas contaminante...">
     </div>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" data-step="4" data-intro="Elige el contaminante! ">
         <ion-fab-button>
             <ion-icon name="more">
             </ion-icon>
