--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -18,9 +18,9 @@
             <ion-select-option value="NOX">NOX</ion-select-option>
         </ion-select>
     </ion-item>
-    <div id="map" #map style="height:100%;" data-step="3" data-intro="Visualiza tu mapa con todo tipo de detalles. Puedes ver la cantidad de gas contaminante...">
+    <div id="map" #map style="height:100%;" data-step="3" data-intro="Visualiza tu mapa con todo tipo de detalles. Con un simple vistazo puedes saber la cantidad de gas que hay en toda la zona gracias al mapa de calor que creamos para ti. Coge tu sensor, sal a la calle y analiza todos tus datos. Además te damos la ruta más corta o menos contaminada hacia tu destino. ¿A qué esperas?">
     </div>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed" data-step="4" data-intro="Elige el contaminante! ">
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" data-step="4" data-intro=" Muestra el mapa de calor y elige el contaminante! ">
         <ion-fab-button>
             <ion-icon name="more">
             </ion-icon>
