--- a/src/app/routes/directions/directions.page.html
+++ b/src/app/routes/directions/directions.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Directions</ion-title>
     <ion-buttons slot="end">
-      <ion-button (onclick)="dismissModal()">Close</ion-button>
+      <ion-button (click)="cerrarDirections()">Close</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
