--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -20,7 +20,7 @@
     </ion-item>
     <div id="map" #map style="height:100%;">
     </div>
-    <ion-button (click)="mostrarDirections()" class="directionsButton" shape="round">
+    <ion-button id="directionsButton" #directionsButton (click)="mostrarDirections()" class="directionsButton" shape="round">
         <ion-icon name="map"></ion-icon> Directions
     </ion-button>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
