--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -12,7 +12,7 @@
             </ion-col>
             <ion-col size="6" class="ion-text-center">
                 <ion-avatar>
-                    <img [src]="this.helper.obtenerImagenGravatar()">
+                    <img [src]="this.helper.obtenerImagenGravatar() || userDefaultPic">
                 </ion-avatar>
                 <ion-label>{{userEmail}}</ion-label>
             </ion-col>
