Implemented finish route

--- a/src/app/routes/directions/directions.page.html
+++ b/src/app/routes/directions/directions.page.html
@@ -3,8 +3,11 @@
       <ion-title>Directions</ion-title>
       <ion-buttons slot="end">
         <ion-button (click)="cerrarDirections()">Close</ion-button>
-        <ion-button color="primary" (click)="openGoogleMaps()">
+        <ion-button *ngIf="!rutaEnMarcha" color="primary" (click)="openGoogleMaps()">
           Go<ion-icon name="navigate"></ion-icon>
+        </ion-button>
+        <ion-button *ngIf="rutaEnMarcha" color="danger" (click)="finalizarRuta()">
+          Finish
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
