--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,3 +10,7 @@
     // Half the width 
     // Fuente => https://css-tricks.com/snippets/css/absolute-center-vertical-horizontal-an-image/
 }
+.info-button{
+    float: right;
+    font-size: 25px;
+}
