Added some information

--- a/src/app/home/information/information.page.html
+++ b/src/app/home/information/information.page.html
@@ -5,5 +5,223 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Sulfur dioxide</ion-card-subtitle>
+      <ion-card-title>SO2</ion-card-title>
+    </ion-card-header>
 
+    <ion-card-content>
+      Colorless, irritating, non-flammable and penetrating odor gas. It mainly affects the lungs, causing coughing
+      attacks. In larger doses it can cause irritation of the respiratory tract, bronchitis and congestion of the
+      bronchial ducts. Chronic exposure may cause adverse effects on mortality, morbidity and lung function.
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div>
+              <ion-chip color="success">
+                <ion-label>Ok</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="warning">
+                <ion-label>Warning</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="danger">
+                <ion-label>Danger</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Ozone</ion-card-subtitle>
+      <ion-card-title>O3</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Colorless gas, with a strong smell. Depending on the exposure time and gas concentration, the side effects vary
+      between irritation of eyes, nose and throat, reduced adaptation to darkness, nausea and headache; and pulmonary
+      edema and susceptibility to respiratory infections.
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div>
+              <ion-chip color="success">
+                <ion-label>Ok</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="warning">
+                <ion-label>Warning</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="danger">
+                <ion-label>Danger</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Carbon monoxide</ion-card-subtitle>
+      <ion-card-title>CO</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      It is a colorless and highly toxic gas. If you breathe at high levels it can cause death as it replaces the oxygen
+      in the blood hemoglobin. An exposure with a concentration of 0.4% is deadly at the time
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div>
+              <ion-chip color="success">
+                <ion-label>Ok</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="warning">
+                <ion-label>Warning</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="danger">
+                <ion-label>Danger</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Nitrogen Dioxide</ion-card-subtitle>
+      <ion-card-title>NO2</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      It is a gas of a brown-yellowish color. It occurs in combustion at high temperatures, as in vehicles and power
+      plants. It is a frequent pollutant in urban areas. It is a toxic, irritating gas and the precursor of nitrate
+      particle formation. These particles produce high levels of PM-2.5 in the environment
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div>
+              <ion-chip color="success">
+                <ion-label>Ok</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="warning">
+                <ion-label>Warning</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              <ion-chip color="danger">
+                <ion-label>Danger</ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+          <ion-col>
+            <div>
+              2ppm
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
