Minor UI changes

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,6 +11,8 @@
     // Fuente => https://css-tricks.com/snippets/css/absolute-center-vertical-horizontal-an-image/
 }
 .info-button{
-    float: right;
     font-size: 25px;
+}
+.button{
+    float: right;
 }
