--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,36 +4,58 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content data-step= "1" data-intro="Bienvenido a EcoHolder! Te encuentras dentro de la mejor aplicación que combate la contaminación. Te animo a que veas este tutorial para poder aprovechar al máximo esta experiencia!">
+<ion-content data-step="1"
+    data-intro="Bienvenido a EcoHolder! Te encuentras dentro de la mejor aplicación que combate la contaminación. Te animo a que veas este tutorial para poder aprovechar al máximo esta experiencia!">
     <ion-grid>
         <ion-row>
             <ion-col size="0" size-lg="3">
             </ion-col>
             <ion-col size="12" size-lg="6">
-                <ion-card data-step= "2" data-intro= "Aqui podrás encontrar la contaminación a la que has sido expuesto en las últimas 24 Horas. La barra te muestra en qué nivel de exposición estás. Además puedes encontrar muchos consejos!">
+                <ion-card data-step="2"
+                    data-intro="Aqui podrás encontrar la contaminación a la que has sido expuesto en las últimas 24 Horas. La barra te muestra en qué nivel de exposición estás. Además puedes encontrar muchos consejos!">
                     <ion-card-header>
-                        <ion-buttons (click)="abrirInfo()" class="info-button">
-                                <ion-icon name="information-circle"></ion-icon>
+                        <ion-buttons (click)="abrirInfo()" class="info-button button">
+                            <ion-icon name="information-circle"></ion-icon>
                         </ion-buttons>
-                        <ion-card-title>Mi nivel de exposición</ion-card-title>
-                        <ion-card-subtitle>Últimas 24 horas</ion-card-subtitle>
+                        <ion-card-title>My exposure level</ion-card-title>
+                        <ion-card-subtitle>Last 24 hours</ion-card-subtitle>
                     </ion-card-header>
                     <ion-card-content>
 
                         <div style="display: block"><canvas id="yudhatp-chart" style="z-index:2;"></canvas>
                             <ion-avatar><img class="avatar" [src]="userImg" /></ion-avatar>
                             <section style="font-size:.8 rem;">
-                                <ion-icon name="alert"> </ion-icon> ¡Ten Cuidado! <br />Tu nivel de exposición empieza a ser elevado
-                                <div style="float:right">
-                                    <ion-button fill="outline" color="primary" size="small" (click)="mostrarConsejos()">CONSEJOS</ion-button>
-                                </div>
+                                <ion-grid>
+                                    <ion-row>
+                                        <ion-col>
+                                            <div>
+                                                <ion-chip color="danger">
+                                                    <ion-label>Danger</ion-label>
+                                                </ion-chip><br>Be careful! your exposure
+                                                level has been high
+                                                today!
+                                            </div>
+                                        </ion-col>
+                                        <ion-col>
+
+                                        </ion-col>
+                                        <ion-col>
+                                            <div>
+                                                <ion-button class="button" fill="outline" color="primary" size="small"
+                                                    (click)="mostrarConsejos()">
+                                                    Tips</ion-button>
+                                            </div>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-grid>
                             </section>
                         </div>
 
                     </ion-card-content>
                 </ion-card>
 
-                <ion-card data-step= "3" data-intro= " ¡LIMPIA TU AIRE! Puedes tener un control de tus rutas favoritas para mantener tus zonas limpias. Marca tu ruta y accede a ella siempre que quieras de manera rápida y sencilla">
+                <ion-card data-step="3"
+                    data-intro=" ¡LIMPIA TU AIRE! Puedes tener un control de tus rutas favoritas para mantener tus zonas limpias. Marca tu ruta y accede a ella siempre que quieras de manera rápida y sencilla">
                     <ion-item>
                         <ion-icon name="navigate" slot="start"></ion-icon>
                         <ion-label>Work</ion-label>
